# small_gicp

./: .codecov.yml  .gitignore  404.html  BENCHMARK.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  codecov.yml  conf.py  index.html  index.rst  mkdocs.yml  package.xml  paper.html  pyproject.toml  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml  coverage.yml  gendoc.yml  license.yml  paper.yml  test.yml  wheels.yml
cmake/: FindGTSAM.cmake  FindIridescence.cmake  FindTBB.cmake  small_gicp-config.cmake.in
data/: T_target_source.txt  source.ply  target.ply
doc_cpp/: README_8md.html  ann_2traits_8hpp.html  ann_2traits_8hpp__dep__incl.map  ann_2traits_8hpp__dep__incl.md5  ann_2traits_8hpp__incl.map  ann_2traits_8hpp__incl.md5  ann_2traits_8hpp_source.html  annotated.html  classes.html  classsmall__gicp_1_1RegistrationPCL-members.html  classsmall__gicp_1_1RegistrationPCL.html  classsmall__gicp_1_1RegistrationPCL__coll__graph.map  classsmall__gicp_1_1RegistrationPCL__coll__graph.md5  classsmall__gicp_1_1RegistrationPCL__inherit__graph.map  classsmall__gicp_1_1RegistrationPCL__inherit__graph.md5  dir_000002_000003.html  dir_000002_000007.html  dir_000004_000002.html  dir_000004_000003.html  dir_000004_000007.html  dir_000005_000002.html  dir_000005_000003.html  dir_000005_000004.html  dir_000005_000006.html  dir_000005_000007.html  dir_000006_000002.html  dir_000006_000003.html  dir_000006_000004.html  dir_000006_000007.html  dir_000007_000002.html  dir_000007_000003.html  dir_02fe799643ef17d8aa92a466d371d870.html  dir_02fe799643ef17d8aa92a466d371d870_dep.map  dir_02fe799643ef17d8aa92a466d371d870_dep.md5  dir_10d2ca31331a920e163404c3842c11af.html  dir_10d2ca31331a920e163404c3842c11af_dep.map  dir_10d2ca31331a920e163404c3842c11af_dep.md5  dir_1e32283d4ab39246fee9af89412835e8.html  dir_65c55b74f1fe3d7e17a0effca76d06ab.html  dir_65c55b74f1fe3d7e17a0effca76d06ab_dep.map  (+549 more)
doc_cpp/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+76 more)
doc_py/: index.html  objects.inv
docker/: Dockerfile.build.gcc  Dockerfile.build.llvm  Dockerfile.gcc  Dockerfile.llvm  Dockerfile.pytest.gcc  Dockerfile.pytest.llvm  Dockerfile.test.gcc  Dockerfile.test.llvm
docs/: Doxyfile  Makefile  conf.py  index.md  paper.bib  paper.md  small_gicp.rst
include/small_gicp/ann/: cached_kdtree.hpp  flat_container.hpp  flat_voxelmap.hpp  gaussian_voxelmap.hpp  incremental_voxelmap.hpp  kdtree.hpp  kdtree_mt.hpp  kdtree_omp.hpp  kdtree_tbb.hpp  knn_result.hpp  nanoflann_mt.hpp  nanoflann_omp.hpp  nanoflann_tbb.hpp  octree.hpp  projection.hpp  projective_search.hpp  sequential_voxelmap_accessor.hpp  traits.hpp
include/small_gicp/benchmark/: benchmark.hpp  benchmark_odom.hpp  read_points.hpp
include/small_gicp/factors/: general_factor.hpp  gicp_factor.hpp  icp_factor.hpp  plane_icp_factor.hpp  robust_kernel.hpp
include/small_gicp/pcl/: pcl_point.hpp  pcl_point_traits.hpp  pcl_proxy.hpp  pcl_registration.hpp  pcl_registration_impl.hpp
include/small_gicp/points/: eigen.hpp  gaussian_voxelmap.hpp  pcl_point.hpp  point_cloud.hpp  traits.hpp
include/small_gicp/registration/: optimizer.hpp  reduction.hpp  reduction_omp.hpp  reduction_tbb.hpp  registration.hpp  registration_helper.hpp  registration_result.hpp  rejector.hpp  termination_criteria.hpp
include/small_gicp/ros/: ros1.hpp  ros2.hpp  ros_impl.hpp
include/small_gicp/util/: benchmark.hpp  downsampling.hpp  downsampling_omp.hpp  downsampling_tbb.hpp  fast_floor.hpp  lie.hpp  normal_estimation.hpp  normal_estimation_omp.hpp  (+5 more)
scripts/: plot_downsampling.py  plot_kdtree.py  plot_odometry.py  plot_odometry_accuracy.py  plot_odometry_native.py  run_downsampling_benchmark.sh  run_kdtree_benchmark.sh  run_odometry_benchmark.sh  run_odometry_benchmark_native.sh
search/: search_index.json
src/: batch_test.cpp  downsampling_benchmark.cpp  downsampling_test.cpp  kdtree_benchmark.cpp  odometry_benchmark.cpp  odometry_benchmark_fast_gicp.cpp  odometry_benchmark_fast_vgicp.cpp  odometry_benchmark_pcl.cpp  odometry_benchmark_small_gicp.cpp  odometry_benchmark_small_gicp_omp.cpp  odometry_benchmark_small_gicp_tbb.cpp  odometry_benchmark_small_gicp_tbb_batch.cpp  odometry_benchmark_small_gicp_tbb_flow.cpp  odometry_benchmark_small_vgicp_model_tbb.cpp  odometry_benchmark_small_vgicp_omp.cpp  odometry_benchmark_small_vgicp_tbb.cpp  small_gicp_test.cpp  sort_test.cpp
src/benchmark/: downsampling_benchmark.cpp  kdtree_benchmark.cpp  odometry_benchmark.py  odometry_benchmark_fast_gicp.cpp  odometry_benchmark_fast_vgicp.cpp  odometry_benchmark_pcl.cpp  odometry_benchmark_small_gicp.cpp  odometry_benchmark_small_gicp_model_omp.cpp  odometry_benchmark_small_gicp_model_tbb.cpp  odometry_benchmark_small_gicp_omp.cpp  odometry_benchmark_small_gicp_pcl.cpp  odometry_benchmark_small_gicp_tbb.cpp  odometry_benchmark_small_gicp_tbb_flow.cpp  odometry_benchmark_small_vgicp_model_omp.cpp  odometry_benchmark_small_vgicp_model_tbb.cpp  odometry_benchmark_small_vgicp_omp.cpp  odometry_benchmark_small_vgicp_tbb.cpp
src/example/: 01_basic_registration.cpp  02_basic_registration_pcl.cpp  03_registration_template.cpp  basic_registration.py  kitti_odometry.py
src/python/: align.cpp  factors.cpp  kdtree.cpp  misc.cpp  pointcloud.cpp  preprocess.cpp  python.cpp  result.cpp  voxelmap.cpp
src/test/: downsampling_test.cpp  helper_test.cpp  kdtree_synthetic_test.cpp  kdtree_test.cpp  normal_estimation_test.cpp  points_test.cpp  python_test.py  registration_test.cpp  sort_omp_test.cpp  sort_tbb_test.cpp  vector_test.cpp
(+7 files in other folders)
